--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "hex-rgb": "^5.0.0",
     "react-router-dom": "^6.22.3"
   }
 }
