--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.9",
+    "@types/react-leaflet": "^3.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^3.11.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
