--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@types/leaflet": "^1.9.9",
     "@types/react-leaflet": "^3.0.0",
+    "deck.gl": "^9.0.6",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^3.11.1",
+    "maplibre-gl": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
