--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,9 +15,12 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@types/react-router-dom": "^5.3.3",
+    "deck.gl": "^9.0.8",
     "hex-rgb": "^5.0.0",
+    "maplibre-gl": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
