--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.2.0",
     "@types/react-router-dom": "^5.3.3",
+    "dayjs": "^1.11.10",
     "deck.gl": "^9.0.8",
     "hex-rgb": "^5.0.0",
     "maplibre-gl": "^4.1.2",
