--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -16,16 +16,21 @@
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.2.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/validator": "^13.11.9",
     "dayjs": "^1.11.10",
     "deck.gl": "^9.0.8",
     "hex-rgb": "^5.0.0",
+    "libphonenumber-js": "^1.10.60",
+    "lodash": "^4.17.21",
     "maplibre-gl": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.7",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
