--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "deck.gl": "^9.0.8",
     "hex-rgb": "^5.0.0",
+    "lodash": "^4.17.21",
     "maplibre-gl": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
