--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -19,11 +19,15 @@
     "dayjs": "^1.11.10",
     "deck.gl": "^9.0.8",
     "hex-rgb": "^5.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^3.11.1",
     "libphonenumber-js": "^1.10.61",
     "lodash": "^4.17.21",
     "maplibre-gl": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.22.3",
     "validator": "^13.11.0",
@@ -31,6 +35,7 @@
   },
   "devDependencies": {
     "@communecar/types": "*",
+    "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
