--- a/apps/BE/package.json
+++ b/apps/BE/package.json
@@ -4,15 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf coverage dist",
+    "lint": "eslint ./src/*.ts",
+    "build": "tsc",
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon --config nodemon.json src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.1.0",
     "prisma": "^5.13.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.13.0"
+    "@prisma/client": "^5.13.0",
+    "@types/express": "^4.17.21",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "postgraphile": "^4.13.0"
   }
 }
