--- a/apps/BE/package.json
+++ b/apps/BE/package.json
@@ -15,12 +15,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "nodemon": "^3.1.0",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
-    "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "postgraphile": "^4.13.0"
