--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,6 +15,10 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.2.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.43.1",
     "@types/react-router-dom": "^5.3.3",
     "dayjs": "^1.11.10",
     "deck.gl": "^9.0.8",
