--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "maplibre-gl": "^4.1.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
