--- a/apps/BE/package.json
+++ b/apps/BE/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0"
   },
@@ -23,6 +25,8 @@
     "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "postgraphile": "^4.13.0"
+    "postgraphile": "^4.13.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
