--- a/apps/BE/package.json
+++ b/apps/BE/package.json
@@ -22,11 +22,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "postgraphile": "^4.13.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
