--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,7 +15,10 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.2.0",
+    "@types/axios": "^0.14.0",
+    "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "deck.gl": "^9.0.8",
     "hex-rgb": "^5.0.0",
@@ -29,6 +32,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-map-gl": "^7.1.7",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "validator": "^13.11.0",
     "vite-plugin-pwa": "^0.19.8"
