--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,12 +15,10 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.2.0",
-    "@types/axios": "^0.14.0",
-    "@types/react-query": "^1.2.9",
-    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "deck.gl": "^9.0.8",
+    "dotenv": "^16.4.5",
     "hex-rgb": "^5.0.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^3.11.1",
@@ -39,10 +37,13 @@
   },
   "devDependencies": {
     "@communecar/types": "*",
+    "@types/axios": "^0.14.0",
     "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-query": "^1.2.9",
+    "@types/react-router-dom": "^5.3.3",
     "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
