--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.2.0",
+    "@tanstack/react-query": "^5.36.2",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "deck.gl": "^9.0.8",
