--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -32,6 +32,7 @@
     "react-map-gl": "^7.1.7",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
+    "react-use": "^17.5.0",
     "validator": "^13.11.0",
     "vite-plugin-pwa": "^0.19.8"
   },
