--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -22,6 +22,7 @@
     "hex-rgb": "^5.0.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^3.11.1",
+    "leaflet-routing-machine": "^3.2.12",
     "libphonenumber-js": "^1.10.61",
     "lodash": "^4.17.21",
     "maplibre-gl": "^4.1.2",
@@ -40,6 +41,7 @@
     "@communecar/types": "*",
     "@types/axios": "^0.14.0",
     "@types/leaflet": "^1.9.12",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
