--- a/apps/BE/package.json
+++ b/apps/BE/package.json
@@ -17,17 +17,21 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "base64-arraybuffer": "^1.0.2",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "postgraphile": "^4.13.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
