--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-custom-control": "^1.4.0",
     "react-map-gl": "^7.1.7",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
