aligned .env.example with actual .env

--- a/apps/BE/.env.example
+++ b/apps/BE/.env.example
@@ -1,2 +1,7 @@
+SUPABASE_URL=https://...supabase.co
+SUPABASE_KEY=...
 DATABASE_URL=postgres://user:pass@host:port/postgres
 WHITELISTED_DOMAINS=http://localhost:5173;http://localhost:8001;
+GEOCODE_MAPS_CO_KEY=...
+LOCATIONIQ_KEY=...
+GRAPHHOPPER_KEY=...
