--- a/apps/BE/package.json
+++ b/apps/BE/package.json
@@ -21,6 +21,7 @@
     "@types/multer": "^1.4.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^9.0.8",
     "base64-arraybuffer": "^1.0.2",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0"
@@ -36,6 +37,7 @@
     "postgraphile": "^4.13.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "uuid": "^10.0.0"
   }
 }
